--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,16 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/app.js"
     }
   ]
 }
+
